fix white space problem

--- a/responsive.css
+++ b/responsive.css
@@ -1,13 +1,15 @@
 @media (max-width: 1000px){
     body{
-      max-width: 700px;
+      max-width: 100%;
+      width: 100%;
+      margin-right: 0px!important;
+      padding-right: 0px!important;
     }
     .header-right{
         display: none;
     }
     .menu-icon{
         opacity: 1;
-        margin-right: 40px;
     }
     .visimi{
         width:50%;
