--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,7 +15,7 @@ header a {
 
 header .container {
   max-width: 1170px;
-  width: 100%;
+  /* width: 100%; */
   padding: 0 15px;
   margin: 0 auto;
 }
